/*
 * $Id: ChangeLog,v 1.2513 2004/03/07 00:01:17 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-06 17:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Apply recent HB_PP_MAX_NESTED_OPTIONALS fix to CheckOptional() too.

2004-03-07 07:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    % directly assign values to subarrays w/o temporary medium in function:
      hb_fsGrabDirectory()

  * source/vm/hvm.c
    % directly assign values to subarrays w/o temporary medium in function:
      HB_SAVEBLOCK()

  * source/vm/memvars.c
    % directly assign values to subarrays w/o temporary medium in function:
      hb_GetSymbolInfo()

  * source/vm/classes.c
    % directly assign values to subarrays w/o temporary medium in functions:
      hb___msgClsFullSel(), __CLASSSEL(), hb___msgClsSel(), __CLS_PARAM(),
      __CLSGETPROPERTIESANDVALUES() and __CLSGETIVARNAMESANDVALUES()

  * source/vm/extend.c
    % directly assign values to subarrays w/o temporary medium in functions:
      hb_storc(),hb_storclen(),hb_stords(),hb_storl(),hb_storni(),
      hb_stornl(),hb_stornd() and hb_stornll()

  * source/rtl/hbserv.c
  * source/vm/inet.c
  * contrib/libct/dbftools.c
  * contrib/libct/charlist.c
    % avoid usage of hb_itemNew(NULL)

2004-03-06 21:20 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * modified the interpretation of ordcreate flags, now they should
      be CL53 DBFCDX compatible

2004-03-06 11:59 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hberrors.h
    + Added: #define HB_PP_ERR_TOO_MANY_OPTIONALS            25
  * source/pp/ppcore.c
    + Added: #define HB_PP_MAX_NESTED_OPTIONALS 32
    * Increased s_aIsRepeate[] and lastopi[] to HB_PP_MAX_NESTED_OPTIONALS