@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2513 2004/03/07 00:01:17 andijahja Exp $
+ * $Id: ChangeLog,v 1.2514 2004/03/07 01:07:52 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-07 15:25 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
+  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
+    * fixed problem with EVAL code block in [RE]INDEX operations
+      introduced with my previous commit
 
 2004-03-06 17:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
